2006-08-27  Aaron Bockover  <abockover@novell.com>
    * src/TagLib/ReadOnlyException.cs: New exception

    * src/TagLib/File.cs:
    * src/TagLib/Mpc/File.cs:
    * src/TagLib/Mpeg/File.cs:
    * src/TagLib/WavPack/File.cs:
    * src/TagLib/Flac/File.cs:
    * src/TagLib/Asf/File.cs:
    * src/TagLib/Mpeg4/AppleTag.cs:
    * src/TagLib/Mpeg4/File.cs:
    * src/TagLib/Ogg/File.cs:
    * src/TagLib/Ogg/Vorbis/File.cs:
    * src/TagLib/Ogg/Flac/File.cs: Save is now void, throws exceptions
    when a problem has arisen instead of eventually returning false, masking
    the source of the problem

    * taglib-sharp.csproj:
    * src/Makefile.am: Updated


svn path=/trunk/taglib-sharp/; revision=64456

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -91,7 +91,8 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/File.cs                                        \
    $(srcdir)/TagLib/StringList.cs                                  \
    $(srcdir)/TagLib/SupportedMimeType.cs                           \
-   $(srcdir)/TagLib/UnsupportedFormatException.cs
+   $(srcdir)/TagLib/UnsupportedFormatException.cs                  \
+   $(srcdir)/TagLib/ReadOnlyException.cs
 
 taglib-sharp.snk: $(top_srcdir)/taglib-sharp.snk
 	cp $(top_srcdir)/taglib-sharp.snk .
