2006-09-15  Brian Nickel  <brian.nickel@gmail.com> 	* src/TagLib/Picture.cs: 	* src/TagLib/Tag.cs: 	* src/TagLib/CombinedTag.cs: 	* src/TagLib/File.cs: 	* src/TagLib/Id3v2/Tag.cs: 	* src/TagLib/Id3v2/Frames/AttachedPictureFrame.cs: 	* src/TagLib/ByteVector.cs: 	* src/TagLib/Mpeg4/Boxes/Box.cs: 	* src/TagLib/Mpeg4/Boxes/IsoHandlerBox.cs: 	* src/TagLib/Mpeg4/Boxes/AppleDataBox.cs: 	* src/TagLib/Mpeg4/AppleTag.cs: 	* src/TagLib/Ogg/XiphComment.cs: Add generic picture support to TagLib#. This 	currently supports MP3 and M4A tags although support can and will be added 	for other tag types in the future. 	* src/Makefile.am: 	* taglib-sharp.mds: 	* taglib-sharp.csproj: 	* examples/ReadFromUri.cs: 	* examples/Makefile.am: 	* examples/SetPictures.mdp: 	* examples/SetPictures.cs: 	* examples/ReadFromUri.mdp: New examples from Aaron Bockover. 	* src/TagLib/Mpeg4/Boxes/IsoChunkLargeOffsetBox.cs: 	* src/TagLib/Mpeg4/Boxes/IsoChunkOffsetBox.cs: Eliminate a nasty bug where 	changes to 'mdat' offsets, ie. any file size change, broke MP4 files.
svn path=/trunk/taglib-sharp/; revision=65440

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,8 @@
 READ_FROM_URI = ReadFromUri
+SET_PICTURES = SetPictures
 
 REFERENCES = -r:taglib-sharp.dll
-EXAMPLES_BUILD = taglib-sharp.dll
+EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe
 
 if HAVE_GNOME_SHARP
 EXAMPLES_BUILD += $(READ_FROM_URI).exe
@@ -17,7 +18,10 @@ $(READ_FROM_URI).exe: $(READ_FROM_URI).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $(GNOME_SHARP_LIBS) $<
 endif
 
-EXTRA_DIST = $(READ_FROM_URI).cs
+$(SET_PICTURES).exe: $(SET_PICTURES).cs
+	$(MCS) -out:$@ -debug $(REFERENCES) $<
+
+EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs
 
 CLEANFILES = *.dll *.exe *.mdb
 MAINTAINERCLEANFILES = Makefile.in
