--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 AC_INIT(src/TagLib/File.cs)
 AC_CANONICAL_SYSTEM
 
-VERSION=1.0.0
-ASM_VERSION="$VERSION.*"
+VERSION=1.1.0
+ASM_VERSION="$VERSION.0"
 
 AC_SUBST(VERSION)
 AC_SUBST(ASM_VERSION)
