2006-10-12  Brian Nickel  <brian.nickel@gmail.com>
	* src/TagLib/Mpeg4/Boxes/IsoChunkLargeOffsetBox.cs:
	* src/TagLib/Mpeg4/Boxes/IsoChunkOffsetBox.cs:
	* src/TagLib/Mpeg4/AppleTag.cs: Fixed a bug where changing tag size would
	devalidate offsets for data before the tag.
	* examples/BatchSet.cs:
	* examples/Makefile.am: Add a simple program to update tags on multiple
	files.


svn path=/trunk/taglib-sharp/; revision=66637

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,8 +1,9 @@
 READ_FROM_URI = ReadFromUri
 SET_PICTURES = SetPictures
+BATCH_SET = BatchSet
 
 REFERENCES = -r:taglib-sharp.dll
-EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe
+EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe  $(BATCH_SET).exe
 
 if HAVE_GNOME_SHARP
 EXAMPLES_BUILD += $(READ_FROM_URI).exe
@@ -21,7 +22,10 @@ endif
 $(SET_PICTURES).exe: $(SET_PICTURES).cs
 	$(MCS) -out:$@ -debug $(REFERENCES) $<
 
-EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs
+$(BATCH_SET).exe: $(BATCH_SET).cs
+	$(MCS) -out:$@ -debug $(REFERENCES) $<
+
+EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs  $(BATCH_SET).cs
 
 CLEANFILES = *.dll *.exe *.mdb
 MAINTAINERCLEANFILES = Makefile.in
