2006-10-29  Aaron Bockover  <abock@gnome.org>
    * tests/: Added more tests (IntList, StringList), restructured layout


svn path=/trunk/taglib-sharp/; revision=67108

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,7 +5,7 @@ ASSEMBLY_NAME = tests
 ASSEMBLY = $(ASSEMBLY_NAME).dll
 ASSEMBLY_CSFILES = \
 	$(srcdir)/CodeTimer.cs \
-	$(srcdir)/fixtures/*.cs
+	$(srcdir)/fixtures/*/*.cs
 
 NUNIT_TESTER_NAME = ConsoleUi
 NUNIT_TESTER = $(NUNIT_TESTER_NAME).exe
