2006-11-13  Aaron Bockover  <abock@gnome.org>
    * src/TagLib/SupportedMimeType.cs: Load mime types in static constructor

    * src/TagLib/FileTypes.cs: File type loader that initializes the
    SupportedMimeType support

    * src/TagLib/File.cs: Use FileTypes.AvailableTypes

    * src/Makefile.am: Added src/TagLib/FileTypes.cs


svn path=/trunk/taglib-sharp/; revision=67813

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -96,7 +96,8 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/UnsupportedFormatException.cs                  \
    $(srcdir)/TagLib/ReadOnlyException.cs                           \
    $(srcdir)/TagLib/Picture.cs                                     \
-   $(srcdir)/TagLib/ListBase.cs
+   $(srcdir)/TagLib/ListBase.cs                                    \
+   $(srcdir)/TagLib/FileTypes.cs
 
 taglib-sharp.snk: $(top_srcdir)/taglib-sharp.snk
 	cp $(top_srcdir)/taglib-sharp.snk .
