2006-12-26  Aaron Bockover  <abockover@novell.com>
    * src/TagLib/CorruptFileException.cs: Added new exception

    * src/TagLib/Mpeg4/File.cs:
    * src/TagLib/Ogg/Vorbis/File.cs: Guard against nullrefs, if necessary
    parts are null, throw a CorruptFileException instead to avoid seg violation

    * tests/fixtures/TagLib.FormatTests/IFormatTest.cs: Added interface for
    the format test

    * tests/fixtures/TagLib.FormatTests/*.cs: Implement IFormatTest,
    added TestCorruptionResistance

    * tests/samples/corrupt/*: Added some 'corrupt' samples


svn path=/trunk/taglib-sharp/; revision=70098

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,7 +97,8 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/ReadOnlyException.cs                           \
    $(srcdir)/TagLib/Picture.cs                                     \
    $(srcdir)/TagLib/ListBase.cs                                    \
-   $(srcdir)/TagLib/FileTypes.cs
+   $(srcdir)/TagLib/FileTypes.cs                                   \
+   $(srcdir)/TagLib/CorruptFileException.cs
 
 taglib-sharp.snk: $(top_srcdir)/taglib-sharp.snk
 	cp $(top_srcdir)/taglib-sharp.snk .
