2007-01-07  Brian Nickel  <brian.nickel@gmail.com>
	* src/TagLib/File.cs: Throw ReadOnlyException when it makes sense.
	* src/TagLib/Id3v2/Frames/AttachedPictureFrame.cs: Fix for UTF16.
	* src/TagLib/Id3v2/Frames/GeneralEncapsulatedObjectFrame.cs:
	* src/TagLib/Id3v2/FrameFactory.cs:
	* src/TagLib/Id3v1/Tag.cs:
	* src/TagLib/Id3v2/Frames/TextIdentificationFrame.cs:
	* src/TagLib/Mpeg/XingHeader.cs: 
	* src/TagLib/Mpeg/Header.cs: Improvements from TagLib.
	* src/TagLib/Flac/Picture.cs:
	* src/TagLib/Flac/File.cs: Massive code rewrite. Added support for Picture
	Block.
	* src/TagLib/Mpeg4/Boxes/IsoHandlerBox.cs: Fix typo.
	* src/Makefile.am: Add new files.
	* examples/ReadFromUri.cs: Update for changes in TagLib.Tag


svn path=/trunk/taglib-sharp/; revision=70624

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Ogg/PageHeader.cs                              \
    $(srcdir)/TagLib/Ogg/File.cs                                    \
    $(srcdir)/TagLib/Flac/Properties.cs                             \
+   $(srcdir)/TagLib/Flac/Picture.cs                                \
    $(srcdir)/TagLib/Flac/File.cs                                   \
    $(srcdir)/TagLib/Mpeg/Properties.cs                             \
    $(srcdir)/TagLib/Mpeg/XingHeader.cs                             \
@@ -46,6 +47,7 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Id3v2/Frames/CommentsFrame.cs                  \
    $(srcdir)/TagLib/Id3v2/Frames/TextIdentificationFrame.cs        \
    $(srcdir)/TagLib/Id3v2/Frames/AttachedPictureFrame.cs           \
+   $(srcdir)/TagLib/Id3v2/Frames/GeneralEncapsulatedObjectFrame.cs \
    $(srcdir)/TagLib/Id3v2/FrameFactory.cs                          \
    $(srcdir)/TagLib/Id3v2/Frame.cs                                 \
    $(srcdir)/TagLib/Id3v2/Tag.cs                                   \
