2007-02-12  Brian Nickel  <brian.nickel@gmail.com>
	* src/TagLib/File.cs: Remove ReadOnly checking. This is to add compatability
	with the .NET Compact Framework and to remove some ugly code. Libraries 
	using TagLib# should check file writability for themselves if they want
	the writable status before Save() is called. Also use more compatable
	Array.Copy().
	* src/TagLib/Mpeg/File.cs: Comment out unused method.
	* src/TagLib/ByteVector.cs: Use more compatable Array.Copy()
	* src/TagLib/ReadOnlyException.cs: Removed because unused.
	* src/AssemblyInfo.cs.in: Update copyright.
	* src/AssemblyInfo-windows.cs: Update version and copyright.
	* src/Makefile.am:
	* src/taglib-sharp.mdp:
	* taglib-sharp.csproj: Update files.

svn path=/trunk/taglib-sharp/; revision=72686

--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -52,7 +52,6 @@
     <Compile Include="src\TagLib\StringList.cs" />
     <Compile Include="src\TagLib\SupportedMimeType.cs" />
     <Compile Include="src\TagLib\UnsupportedFormatException.cs" />
-    <Compile Include="src\TagLib\ReadOnlyException.cs" />
 	<Compile Include="src\TagLib\WavPack\File.cs" />
     <Compile Include="src\TagLib\WavPack\Properties.cs" />
     <Compile Include="src\TagLib\Ogg\File.cs" />
@@ -106,6 +105,7 @@
     <Compile Include="src\TagLib\Id3v2\Frames\UnknownFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\CommentsFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\PrivateFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
@@ -114,6 +114,7 @@
     <Compile Include="src\TagLib\Id3v1\StringHandler.cs" />
     <Compile Include="src\TagLib\Id3v1\Tag.cs" />
     <Compile Include="src\TagLib\Flac\File.cs" />
+    <Compile Include="src\TagLib\Flac\Picture.cs" />
     <Compile Include="src\TagLib\Flac\Properties.cs" />
     <Compile Include="src\TagLib\Ape\Tag.cs" />
     <Compile Include="src\TagLib\Ape\Footer.cs" />
