--- a/src/AssemblyInfo.cs.in
+++ b/src/AssemblyInfo.cs.in
@@ -25,7 +25,7 @@ using System.Runtime.CompilerServices;
 [assembly:AssemblyVersion("@ASM_VERSION@")]
 [assembly:AssemblyTitle ("TagLib#")]
 [assembly:AssemblyDescription ("A library for reading and writing audio metatags.")]
-[assembly:AssemblyCopyright ("Copyright (c) 2006 Brian Nickel")]
+[assembly:AssemblyCopyright ("Copyright (c) 2006-2007 Brian Nickel")]
 [assembly:AssemblyCompany ("")]
 [assembly:AssemblyDelaySign(false)]
 [assembly:AssemblyKeyFile("taglib-sharp.snk")]
