2007-03-08  Brian Nickel  <brian.nickel@gmail.com> 	* src/TagLib/Mpc/File.cs: Inherit NonContainer.File 	* src/TagLib/CombinedTag.cs: Add some useful features for NonContainer.* 	* src/TagLib/Id3v1/Tag.cs: Add Tag.Size instead of repeated hardcoding of 	128. 	* src/TagLib/Id3v2/Footer.cs: 	* src/TagLib/Id3v2/Header.cs: Throw proper CorruptFileExceptions 	* src/TagLib/Mpeg/File.cs: Inherit NonContainer.File 	* src/TagLib/WavPack/File.cs: Inherit NonContainer.File 	* src/TagLib/NonContainer: 	* src/TagLib/NonContainer/Tag.cs: 	* src/TagLib/NonContainer/File.cs: 	* src/TagLib/NonContainer/EndTag.cs: 	* src/TagLib/NonContainer/StartTag.cs: New generic abstracts for files 	that can start/end with an assortment of tags. (FLAC, WV, MPC, MP3) 	* src/TagLib/Ape/Tag.cs: Read backwards if a footer is found and forwards if 	a header is found. 	* src/TagLib/Ape/Footer.cs: FooterPresent and IsHeader were read 	 incorrectly. Also throw proper exceptions while reading. 	* src/TagLib/Flac/File.cs: Inherit NonContainer.File 	* src/TagLib/Flac/BlockHeader.cs: 	* src/TagLib/Flac/Block.cs: Removed from Flac.File, made public. 	* src/TagLib/Mpeg4/File.cs: Remove old commented code. 	* src/Makefile.am: 	* src/taglib-sharp.csproj: 	* src/taglib-sharp.mdp: 	* taglib-sharp.mds: 	* tests/tests.mdp: 	* examples/SetPictures.mdp: 	* examples/ReadFromUri.mdp: Updates.
svn path=/trunk/taglib-sharp/; revision=73980

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,8 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Ogg/Vorbis/File.cs                             \
    $(srcdir)/TagLib/Ogg/PageHeader.cs                              \
    $(srcdir)/TagLib/Ogg/File.cs                                    \
+   $(srcdir)/TagLib/Flac/Block.cs                                  \
+   $(srcdir)/TagLib/Flac/BlockHeader.cs                            \
    $(srcdir)/TagLib/Flac/Properties.cs                             \
    $(srcdir)/TagLib/Flac/Picture.cs                                \
    $(srcdir)/TagLib/Flac/File.cs                                   \
@@ -37,6 +39,10 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Mpeg/XingHeader.cs                             \
    $(srcdir)/TagLib/Mpeg/File.cs                                   \
    $(srcdir)/TagLib/Mpeg/Header.cs                                 \
+   $(srcdir)/TagLib/NonContainer/EndTag.cs                         \
+   $(srcdir)/TagLib/NonContainer/File.cs                           \
+   $(srcdir)/TagLib/NonContainer/StartTag.cs                       \
+   $(srcdir)/TagLib/NonContainer/Tag.cs                            \
    $(srcdir)/TagLib/Id3v1/Tag.cs                                   \
    $(srcdir)/TagLib/Id3v1/GenreList.cs                             \
    $(srcdir)/TagLib/Id3v1/StringHandler.cs                         \
