2007-03-09  Brian Nickel  <brian.nickel@gmail.com> 	* configure.ac: Fixed version information.
svn path=/trunk/taglib-sharp/; revision=74020

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,11 @@
 AC_INIT(src/TagLib/File.cs)
 AC_CANONICAL_SYSTEM
 
-VERSION=1.1.0
-ASM_VERSION="$VERSION.0"
+MAJOR_VERSION=1
+MINOR_VERSION=1
+PATCH_VERSION=73998
+VERSION="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
+ASM_VERSION="$MAJOR_VERSION.$MINOR_VERSION.0.0"
 
 AC_SUBST(VERSION)
 AC_SUBST(ASM_VERSION)
