2007-04-15  Brian Nickel <brian.nickel@gmail.com>
Added support for MPEG-4 video!

	* src/TagLib/Tag.cs:
	* src/TagLib/File.cs:
	* src/TagLib/Mpeg/XingHeader.cs:
	* src/TagLib/Properties.cs: Removed obsolete properties and methods.
	* src/TagLib/Ape/Tag.cs:
	* src/TagLib/Ape/Footer.cs:
	* src/TagLib/Ape/Item.cs: Cleaned up formatting a bit.
	* src/TagLib/Mpeg4/Boxes/IsoSampleEntry.cs:
	* src/TagLib/Mpeg4/Boxes/IsoAudioSampleEntry.cs:
	* src/TagLib/Mpeg4/Boxes/IsoVisualSampleEntry.cs:
	* src/TagLib/Mpeg4/Boxes/AppleElementaryStreamDescriptor.cs:
	* src/TagLib/Mpeg4/Boxes/IsoSampleDescriptionBox.cs:
	* src/TagLib/Mpeg4/Properties.cs:
	* src/TagLib/Mpeg4/FileParser.cs:
	* src/TagLib/Mpeg4/File.cs:
	* src/TagLib/Mpeg4/BoxFactory.cs: Added visual support.
	* src/Makefile.am
	* src/taglib-sharp.mdp
	* taglib-sharp.csproj: Added new files.
	* tests/fixtures/TagLib.FormatTests/AsfFormatTest.cs: The test did not
	represent the field interpretation.

svn path=/trunk/taglib-sharp/; revision=75741

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -85,6 +85,8 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Mpeg4/Boxes/AppleAnnotationBox.cs              \
    $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleTableBox.cs               \
    $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleEntry.cs                  \
+   $(srcdir)/TagLib/Mpeg4/Boxes/IsoAudioSampleEntry.cs             \
+   $(srcdir)/TagLib/Mpeg4/Boxes/IsoVisualSampleEntry.cs            \
    $(srcdir)/TagLib/Mpeg4/Boxes/IsoMetaBox.cs                      \
    $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleDescriptionBox.cs         \
    $(srcdir)/TagLib/Mpeg4/Boxes/AppleAdditionalInfoBox.cs          \
