2007-04-23  Brian Nickel <brian.nickel@gmail.com>
Added support for AVI video files! Revamped the GenreList for video genres.

	* src/TagLib/File.cs: New tag types.
	* src/TagLib/Id3v1/Tag.cs: Clean up.
	* src/TagLib/Riff/List.cs:
	* src/TagLib/Riff/AviProperties.cs:
	* src/TagLib/Riff/File.cs:
	* src/TagLib/Riff/DivXTag.cs:
	* src/TagLib/Riff/ListTag.cs:
	* src/TagLib/Riff/InfoTag.cs:
	* src/TagLib/Riff/MovieIdTag.cs: AVI support!
	* src/TagLib/Genres.cs: Refactored GenreList.
	* src/TagLib/Id3v2/Tag.cs: Clean up rendering.
	* src/TagLib/Id3v2/Frames/UnknownFrame.cs: Expand support.
	* src/TagLib/NonContainer/EndTag.cs:
	* src/TagLib/NonContainer/StartTag.cs: Id3v2 changes.
	* src/TagLib/FileTypes.cs: Added Riff type.
	* src/TagLib/Asf/File.cs:
	* src/TagLib/Asf/Tag.cs:
	* src/TagLib/Asf/ExtendedContentDescriptionObject.cs: IEnumerable.
	* src/TagLib/Mpeg4/FileParser.cs:
	* src/TagLib/Mpeg4/AppleTag.cs: Use BoxList and IEnumerable.
	* src/TagLib/Ogg/File.cs: AccessMode should be Write, not read.
	* src/taglib-sharp.mdp:
	* src/Makefile.am:
	* taglib-sharp.csproj: New files.

svn path=/trunk/taglib-sharp/; revision=76161

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,7 +50,6 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/NonContainer/StartTag.cs                       \
    $(srcdir)/TagLib/NonContainer/Tag.cs                            \
    $(srcdir)/TagLib/Id3v1/Tag.cs                                   \
-   $(srcdir)/TagLib/Id3v1/GenreList.cs                             \
    $(srcdir)/TagLib/Id3v1/StringHandler.cs                         \
    $(srcdir)/TagLib/Id3v2/Frames/PrivateFrame.cs                   \
    $(srcdir)/TagLib/Id3v2/Frames/RelativeVolumeFrame.cs            \
@@ -97,6 +96,13 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/Mpeg4/Boxes/FullBox.cs                         \
    $(srcdir)/TagLib/Mpeg4/Boxes/AppleElementaryStreamDescriptor.cs \
    $(srcdir)/TagLib/Mpeg4/Boxes/AppleDataBox.cs                    \
+   $(srcdir)/TagLib/Riff/AviProperties.cs                          \
+   $(srcdir)/TagLib/Riff/DivXTag.cs                                \
+   $(srcdir)/TagLib/Riff/File.cs                                   \
+   $(srcdir)/TagLib/Riff/InfoTag.cs                                \
+   $(srcdir)/TagLib/Riff/List.cs                                   \
+   $(srcdir)/TagLib/Riff/ListTag.cs                                \
+   $(srcdir)/TagLib/Riff/MovieIdTag.cs                             \
    $(srcdir)/TagLib/WavPack/File.cs                                \
    $(srcdir)/TagLib/WavPack/Properties.cs                          \
    $(srcdir)/TagLib/IntList.cs                                     \
@@ -105,6 +111,7 @@ TAGLIB_CSFILES =                                                   \
    $(srcdir)/TagLib/ByteVector.cs                                  \
    $(srcdir)/TagLib/CombinedTag.cs                                 \
    $(srcdir)/TagLib/Debugger.cs                                    \
+   $(srcdir)/TagLib/Genres.cs                                      \
    $(srcdir)/TagLib/Properties.cs                                  \
    $(srcdir)/TagLib/File.cs                                        \
    $(srcdir)/TagLib/StringList.cs                                  \
